<resources>
    <string name="app_name">parkingAppnet</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- Salida Activity Strings -->
    <string name="text_title">Salida de Vehículo</string>
    <string name="numero_patente">Número Patente</string>
    <string name="text_in">Entrada</string>
    <string name="text_out">Salida</string>
    <string name="textMin">Total Minutos</string>
    <string name="textValor">Total a Pagar</string>
    <string name="textDocument">Tipo Documento</string>
    <string name="textPago">Forma de Pago</string>
    <string name="textVuelto">Vuelto</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>