<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.activity.SalidaVehiculoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="180dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:background="@color/orange"
            android:src="@drawable/logoappnet"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSalida"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black_background"></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="746dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TextView
                android:id="@+id/txtTitulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textSize="30dp"
                android:textColor="@color/black_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.439"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/numero_patente"
                android:textSize="12dp"
                android:textColor="@color/grey_texts2"
                app:layout_constraintEnd_toStartOf="@+id/txNumPatente5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="78dp" />

            <EditText
                android:id="@+id/txNumPatente"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/txNumPatente6" />

            <EditText
                android:id="@+id/txNumPatente2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/txNumPatente7" />

            <EditText
                android:id="@+id/txNumPatente3"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/txNumPatente2" />

            <EditText
                android:id="@+id/txNumPatente4"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/txNumPatente5"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="74dp" />

            <EditText
                android:id="@+id/txNumPatente6"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/txNumPatente5" />

            <EditText
                android:id="@+id/txNumPatente7"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/txNumPatente" />

            <EditText
                android:id="@+id/txNumPatente8"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:ems="10"
                android:hint="we-xx-00"
                android:inputType="textPersonName"
                android:textSize="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txNumPatente4"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/txNumPatente3"
                app:layout_constraintVertical_bias="0.575" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/text_in"
                android:textColor="@color/grey_texts2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/text_out"
                android:textColor="@color/grey_texts2"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:text="@string/textValor"
                android:textColor="@color/grey_texts2"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.006"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/textDocument"
                android:textColor="@color/grey_texts2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="235dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:text="@string/textPago"
                android:textColor="@color/grey_texts2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:text="@string/textMin"
                android:textColor="@color/grey_texts2"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/textVuelto"
                android:inputType="textPersonName"
                android:textColor="@color/grey_texts2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txNumPatente4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="409dp"
                android:layout_height="14dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtTitulo3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>